@@ -1,3 +1,6 @@
+2003-07-15  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/plugins/CustomBookText.py: Add to CVS. 
+
 2003-07-14  Donald Peterson  <dpeterson@sigmaxi.org>
 	* src/docgen/LaTeXDoc.py: Regress UNICODE support to be only a
 	commented line in the output rather than implemented by default
